--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  web3dart: ^2.6.1
+  provider: ^6.0.5
+  http: ^0.13.5
+  web_socket_channel: ^2.3.0
+  google_fonts: ^4.0.3
+  font_awesome_flutter: ^10.4.0
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
@@ -59,7 +66,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/icons/logo_mydoc.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
