--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ version: 1.0.0+1
 
 environment:
   sdk: '>=3.2.5 <4.0.0'
+  # sdk: '>=2.19.5 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -67,6 +68,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - build/contracts/Doctor.json
+    - build/contracts/Patient.json
     - assets/icons/logo_mydoc.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
